--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 	<modules>
 		<module>wb-server</module>
 		<module>wb-client</module>
-	</modules>
+        <module>wb-common</module>
+    </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
